--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,28 +1,8 @@
-.sidebar {
-  background-color: #F3F3F3;
-  width: 280px;
-  /* Set the width of the sidebar */
-  height: 100vh;
-  /* Make the sidebar full height */
-  position: fixed;
-  /* Fix the sidebar on the left side */
-  top: 0;
-  left: 0;
-  /* Align the sidebar to the left side */
-  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-  /* Add a shadow for depth */
-  display: flex;
-  flex-direction: column;
-  /* Stack elements vertically */
-  padding: 20px;
-  /* Add padding inside the sidebar */
-}
-
 .sidebar-menu ul {
   list-style-type: none;
   color: white;
   padding: 10px;
-
+  /* color: rgb(203, 203, 203); */
 }
 
 li {
